<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Muistio">


    <!--napparasti pienella vaivalla sisakkaisilla layouteilla paremman nakonen ulkoasu-->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/otsikko"
            android:id="@+id/otsikko_teksti"
            android:layout_gravity="center" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nimi_syote"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nimi" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numero_syote"
            android:layout_gravity="center_horizontal"
            android:hint="@string/numero"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/syntymapaiva_syote"
            android:layout_gravity="center_horizontal"
            android:hint="@string/syntymapaiva"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/nimipaiva_syote"
            android:layout_gravity="center_horizontal"
            android:hint="@string/nimipaiva"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muokkaa_paalle"
                android:id="@+id/muokkaa_nappi"
                android:visibility="visible"
                android:enabled="false"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lisaa"
                android:id="@+id/lisaa_nappi"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:visibility="visible"
                android:enabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tallenna"
                android:id="@+id/toteuta_muokkaus_nappi"
                android:visibility="gone"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lopeta"
                android:id="@+id/lopeta_poisto_nappi"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/alue"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/scrollattava_alue"
                android:layout_gravity="center_horizontal" >

            </ScrollView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
